Updated index with updates from README

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Planet Platform Postman Collection by kjbrazil</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,70 +9,55 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-  </head>
-  <body>
+</head>
+
+<body>
     <section class="page-header">
-      <h1 class="project-name">Planet Platform Postman Collection</h1>
-      <h2 class="project-tagline"></h2>
-      <a href="https://github.com/kjbrazil/planet-platform-postman-collection" class="btn">View on GitHub</a>
-      <a href="https://github.com/kjbrazil/planet-platform-postman-collection/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/kjbrazil/planet-platform-postman-collection/tarball/master" class="btn">Download .tar.gz</a>
+        <h1 class="project-name">Planet Platform Postman Collection</h1>
+        <h2 class="project-tagline"></h2>
+        <a href="https://github.com/kjbrazil/planet-platform-postman-collection" class="btn">View on GitHub</a>
+        <a href="https://github.com/kjbrazil/planet-platform-postman-collection/zipball/master" class="btn">Download .zip</a>
+        <a href="https://github.com/kjbrazil/planet-platform-postman-collection/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="planet-platform-postman-collection-v0" class="anchor" href="#planet-platform-postman-collection-v0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Planet Platform Postman Collection (v0)</h1>
-
-<p>A set of example HTTP requests for the v0 Planet APIs using Postman. These include:</p>
-
-<ul>
-<li>Scenes</li>
-<li>Orders</li>
-<li>Areas of Interest</li>
-</ul>
-
-<h1>
-<a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h1>
-
-<p>In order to utilize this repo you will need two things:</p>
-
-<ol>
-<li>A <a href="https://www.planet.com/markets/explorer-signup/">Planet Platform account</a>.</li>
-<li>
-<a href="https://www.getpostman.com">Postman</a> for Mac or Chrome.</li>
-</ol>
-
-<h1>
-<a id="setup" class="anchor" href="#setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Setup</h1>
-
-<ol>
-<li>Download or clone this repo to your local machine.</li>
-<li>Open Postman.</li>
-<li>In the top left corner click "Import".</li>
-<li>Click "Import Folder".</li>
-<li>Drag or find your <code>planet-platform-postman-collection</code> folder and click open.</li>
-<li>Both the collection and the environment variables will be imported to Postman.</li>
-<li>In the top right corner to the left of the eye icon, click the drop down and select "Manage Environments".</li>
-<li>Click "Planet".</li>
-<li>Navigate to your <a href="https://www.planet.com/apps/">Planet Platform apps page</a> to obtain your key.</li>
-<li>Navigate back to Postman and replace <code>your-api-key</code> with your actual credentials.</li>
-<li>Click "Update" and close the window.</li>
-<li>Click the environment drop down again and select "Planet".</li>
-<li>You are now ready to start making API calls!</li>
-<li>Try querying all Planet Dove scenes by clicking the Scenes folder &gt; "Query All Planet Dove Scenes" &gt; Send.</li>
-</ol>
-
-<h1>
-<a id="support" class="anchor" href="#support" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support</h1>
-
-<p>If you encounter any issues please <a href="https://github.com/kjbrazil/planet-platform-postman-collection/issues/new">create an issue</a>. Please also feel free to improve upon the collection and submit pull requests. :-)</p>
-
-      <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/kjbrazil/planet-platform-postman-collection">Planet Platform Postman Collection</a> is maintained by <a href="https://github.com/kjbrazil">kjbrazil</a>.</span>
-      </footer>
+        <h1><a id="Planet_Platform_Postman_Collection_v0__v1_0"></a>Planet Platform Postman Collection (v0 &amp; v1)</h1>
+        <p>A set of example HTTP requests for the v0 and v1 Planet APIs using Postman. These include:</p>
+        <ul>
+            <li>Catalog (v1)</li>
+            <li>Scenes (v0)</li>
+            <li>Orders (v0)</li>
+            <li>Areas of Interest (v0)</li>
+        </ul>
+        <h1><a id="Requirements_9"></a>Requirements</h1>
+        <p>In order to utilize this repo you will need two things:</p>
+        <ol>
+            <li>A <a href="https://www.planet.com/markets/explorer-signup/">Planet Platform account</a>.</li>
+            <li><a href="https://www.getpostman.com">Postman</a> for Mac or Chrome.</li>
+        </ol>
+        <h1><a id="Setup_16"></a>Setup</h1>
+        <ol>
+            <li>Clone or download this repo to your local machine.</li>
+            <li>Open Postman.</li>
+            <li>In the top left corner click “Import”.</li>
+            <li>Click “Import Folder”.</li>
+            <li>Drag or find your <code>planet-platform-postman-collection</code> folder and click open.</li>
+            <li>Both the collection and the environment variables will be imported to Postman.</li>
+            <li>In the top right corner to the left of the eye icon, click the drop down and select “Manage Environments”.</li>
+            <li>Click “Planet”.</li>
+            <li>Navigate to your <a href="https://www.planet.com/apps/">Planet Platform apps page</a> to obtain your key.</li>
+            <li>Navigate back to Postman and replace <code>your-api-key</code> with your actual credentials.</li>
+            <li>Click “Update” and close the window.</li>
+            <li>Click the environment drop down again and select “Planet”.</li>
+            <li>You are now ready to start making API calls!</li>
+            <li>Try querying all Planet Dove scenes by clicking the Scenes folder &gt; “Query All Planet Dove Scenes” &gt; Send.</li>
+        </ol>
+        <h1><a id="Support_33"></a>Support</h1>
+        <p>If you encounter any issues please <a href="https://github.com/kjbrazil/planet-platform-postman-collection/issues/new">create an issue</a>. Please also feel free to improve upon the collection and submit pull requests. :-)</p>
 
     </section>
 
 
-  </body>
+</body>
+
 </html>
